Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96718

Crash in inBindingWrapper() (Creator built against Qt 6.2 build)

XMLWordPrintable

    • Linux/Wayland
    • 664c56d6b1 (qt/qtbase/dev) 664c56d6b1 (qt/tqtc-qtbase/dev) 0d412bbed5 (qt/qtbase/6.3) 0d412bbed5 (qt/tqtc-qtbase/6.3) 297323652b (qt/qtbase/6.2) 297323652b (qt/tqtc-qtbase/6.2)

      Creator crashes very often at random point in time (always after different interaction). The crashing thread is always the same (as below, Thread 1).

      Not sure what I have done in order to trigger this. Once it has crashed, the output looked like this:

      QThread::wait: Thread tried to wait on itself
      Segmentation fault (core dumped)
      

      However, when it has crashed again, the message about the QThread wasn't seen.

      Creator master, built against Qt 6.2 branch (f218ef03f506c2080c9d109b4e5b26601d0d1dbf)

      Also reproduced when built agains official Qt 6.2 RC.

      Call stack (crashing thread is always the same):

      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  QObjectCompatProperty<QObjectPrivate::ExtraData, QString, &QObjectPrivate::ExtraData::_qt_property_objectName_offset, &QObjectPrivate::ExtraData::setObjectNameForwarder, &QObjectPrivate::ExtraData::nameChangedForwarder>::inBindingWrapper (this=0x7f4c88005b40, 
          storage=0x7f4c880058a0)
      
      Thread 1 (Thread 0x7f4c99125640 (LWP 395685)):
      #0  QObjectCompatProperty<QObjectPrivate::ExtraData, QString, &QObjectPrivate::ExtraData::_qt_property_objectName_offset, &QObjectPrivate::ExtraData::setObjectNameForwarder, &QObjectPrivate::ExtraData::nameChangedForwarder>::inBindingWrapper (this=0x7f4c88005b40, storage=0x7f4c880058a0) at qtbase/include/QtCore/6.2.0/QtCore/private/../../../../../../../qt-62/qtbase/src/corelib/kernel/qproperty_p.h:442
      #1  0x00007f4d017f20c1 in QObjectCompatProperty<QObjectPrivate::ExtraData, QString, &QObjectPrivate::ExtraData::_qt_property_objectName_offset, &QObjectPrivate::ExtraData::setObjectNameForwarder, &QObjectPrivate::ExtraData::nameChangedForwarder>::value (this=0x7f4c88005b40) at qtbase/include/QtCore/6.2.0/QtCore/private/../../../../../../../qt-62/qtbase/src/corelib/kernel/qproperty_p.h:459
      #2  0x00007f4d017ef40a in QObjectCompatProperty<QObjectPrivate::ExtraData, QString, &QObjectPrivate::ExtraData::_qt_property_objectName_offset, &QObjectPrivate::ExtraData::setObjectNameForwarder, &QObjectPrivate::ExtraData::nameChangedForwarder>::operator QString const& (this=0x7f4c88005b40) at qtbase/include/QtCore/6.2.0/QtCore/private/../../../../../../../qt-62/qtbase/src/corelib/kernel/qproperty_p.h:483
      #3  0x00007f4d017e26b2 in QObject::objectName (this=0x7f4c88005830) at /home/jarek/dev/qt-62/qtbase/src/corelib/kernel/qobject.cpp:1264
      #4  0x00007f4d019b6f1f in QThreadPrivate::start (arg=0x7f4c88005830) at /home/jarek/dev/qt-62/qtbase/src/corelib/thread/qthread_unix.cpp:318
      #5  0x00007f4d01239299 in start_thread () from /lib64/libpthread.so.0
      #6  0x00007f4d01161353 in clone () from /lib64/libc.so.6
      

        For Gerrit Dashboard: QTBUG-96718
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: